--- a/welcome.css
+++ b/welcome.css
@@ -58,6 +58,7 @@ h1 {
 
 /* Ensure the dropdown menu is fully visible */
 .dropdown-content {
+    
     display: none;
     position: absolute;
     background-color: white;
@@ -70,14 +71,16 @@ h1 {
     right: 0;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     font-size: 14px; /* Make text readable */
+    text-align: end;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 
 /* Highlight dropdown items on hover */
 .dropdown-content a:hover {
@@ -87,6 +90,7 @@ h1 {
 /* Ensure dropdown menu appears when 'show' class is added */
 .dropdown-content.show {
     display: block;
+    
 }
 
 
@@ -125,3 +129,9 @@ h1 {
     background-color: rgba(255, 191, 0, 0.9);
     opacity: 1;
 }
+.logout i {
+    font-size: 18px;
+    position: relative;
+    top: 3px; 
+}
+
