--- a/admin/admin.css
+++ b/admin/admin.css
@@ -133,8 +133,8 @@ body::before {
  /* Move table closer to the search bar */
 .table-container {
 
-    width: 60%; /* Reduce width for better alignment */
-    margin: 20px 0 0 0%; /* Move table up and align left */
+    width: 60%; 
+    margin: 20px  0%; /* Move table up and align left */
     text-align: left;
 }
 
@@ -160,15 +160,7 @@ body::before {
     font-size: 16px;
 }
 
-/* Ensure all rows have the same background */
-#studentTable tbody tr {
-    background-color: white;
-}
 
-/* Hover effect */
-#studentTable tbody tr:hover {
-    background-color: #f1f1f1;
-}
 
 
 
