--- a/admin/admin.css
+++ b/admin/admin.css
@@ -122,7 +122,7 @@ body::before {
 }
 
 /* Style the table */
-#studentTable {
+#studentTable, #professorTable {
     width: 100%;
     border-collapse: collapse;
     background-color: white;
@@ -132,12 +132,12 @@ body::before {
 }
 
 /* Header styling */
-#studentTable thead {
+#studentTable thead, #professorTable thead {
     background: rgb(176, 135, 12);
     color: white;
 }
 
-#studentTable th, #studentTable td {
+#studentTable th, #studentTable td, #professorTable th, #professorTable td {
     padding: 12px;
     border: 1px solid #ddd;
     font-size: 16px;
@@ -256,7 +256,7 @@ body::before {
     float: right;
 }
 
-.addStudent{
+.addStudent, .addProfessor{
     color: #b0afaf;
     width: 100%;
     height: 100%;
@@ -264,7 +264,7 @@ body::before {
     border: none;
     hover:
 }
-.addStudent:hover {
+.addStudent:hover, .addProfessor:hover {
     background-color: #ddd;
 }
 
