--- a/admin/admin.css
+++ b/admin/admin.css
@@ -116,7 +116,7 @@ body::before {
  /* Move table closer to the search bar */
 .table-container {
 
-    width: 60%; 
+    width: 50%; 
     margin: 20px  0%; /* Move table up and align left */
     text-align: left;
 }
@@ -256,7 +256,7 @@ body::before {
     float: right;
 }
 
-.addStudent, .addProfessor{
+.addStudent, .addProfessor, .addProfessorInfo button{
     color: #b0afaf;
     width: 100%;
     height: 100%;
@@ -264,7 +264,7 @@ body::before {
     border: none;
     hover:
 }
-.addStudent:hover, .addProfessor:hover {
+.addStudent:hover, .addProfessor:hover, .addProfessorInfo button:hover {
     background-color: #ddd;
 }
 
@@ -323,4 +323,16 @@ body::before {
 #studentDropdown button:hover {
     background-color: #f2f2f2;
     color: #000;
+}
+
+
+.addProfessorInfo{
+    color: black;
+    font: .6em sans-serif;
+    align-items: center;
+    justify-content: center;
+}
+
+.addProfessorInfo button{
+    padding-top: 15px;
 }
